2008-11-09  Luis Medinas  <lmedinas@gnome.org>

        * data/glade/AddWindow.glade:
        * src/AddWindow.cs:

        Fix for bgo #560077 non-working buttons on Add Song/Album windows.
        Patch from Priit Laes <amd@store20.com>.

2008-11-07  Priit Laes <plaes@svn.gnome.org>

	Bug 559631 – [PATCH] Drop glade implementation for error dialogs.

	* TODO:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/ErrorDialog.cs:
	* src/OverwriteDialog.cs:
	* data/glade/Makefile.am:
	R data/glade/ErrorDialog.glade:
	R data/glade/OverwriteDialog.glade:

	Use GtkMessageDialog instead of glade-based dialogs.

2008-11-07  Priit Laes <plaes@svn.gnome.org>

	Bug 474090 – Switch to taglib-sharp

	* TODO:
	* README:
	* Makefile.am:
	* Configure.in:
	* src/Makefile.am:
	* src/Metadata.cs:
	R m4/*:
	R libmuine/id3-vfs/*:
	R libmuine/metadata.[ch]:
	R libmuine/ogg-helper.[ch]:

	Use taglib-sharp for metadata loading. Based on the patch by
	Vianney le Clément.

2008-09-29  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	Bug 553296 – Update Copyrights

	* src/About.cs: Add some people to the credits dialog
	and add a "various contributors" copyright statement to
	the main about dialog.

2008-09-28  Luis Medinas  <lmedinas@gnome.org>

	* NEWS:
	* configure.in:
	
	Update NEWS and bump release to 0.8.10.

2008-09-28  Luis Medinas  <lmedinas@gnome.org>

	* configure.in:

	Fix id3lib dependency check on configure.
	Patch from Peter Adolphs closes bgo #491057.

2008-09-28  Luis Medinas  <lmedinas@gnome.org>

	* configure.in:
	* Makefile.am:
	
	Remove internal NDesk-DBus-sharp. Fixes bgo #553292.

2008-09-28  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* NEWS: Update for the upcoming 0.8.10 release.

2008-09-28  Diego Escalante Urrelo  <diegoe@gnome.org>

	Bug 308208 – Play Album window does not show all albums

	* b/data/muine.schemas.in
	* src/Album.cs
	* src/SongDatabase.cs:

	Revert an old commit removing only_complete_albums functionality.
