@@ -23,10 +23,10 @@ dnl Version dependencies
 
 LIBXINE_REQUIRED=1.0.0
 GSTREAMER_REQUIRED=0.10.0
-GTK_REQUIRED=2.6
+GTK_REQUIRED=2.8
 ICON_THEME_REQUIRED=2.10
 MONO_REQUIRED=1.1
-GTKSHARP_REQUIRED=2.6.0
+GTKSHARP_REQUIRED=2.8.0
 TAGLIBSHARP_REQUIRED=2.0.3
 MONODOC_REQUIRED=1.1.9
 
