@@ -30,8 +30,6 @@ libmuine_la_SOURCES =			\
 	gsequence.h			\
 	pointer-list-model.c		\
 	pointer-list-model.h		\
-	rb-cell-renderer-pixbuf.c	\
-	rb-cell-renderer-pixbuf.h	\
 	db.c				\
 	db.h				\
 	mm-keys.c			\
